[package]
name = "levelset_by_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.1.4", features=["derive"]}
image = "0.24.5"
opencv = "0.76.2"
num-traits = "0.2.15"
bimap = "0.6.2"
multimap = "0.8.3"
ordered-multimap = "0.6.0"
rustc_data_structures = "0.0.1"